<resources>
    <string name="app_name">Agit</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btc">BTC</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="_6_54">6.54</string>
    <string name="_2009_01_03">2009–01-03</string>
    <string name="not_found">Coin not found</string>
    <string name="something_wrong">Oops.. something wrong</string>
    <string name="image_description">Detail Image</string>
    <string name="detail">Detail</string>
    <string name="fullname">Fullname</string>
    <string name="date">Date</string>
    <string name="algorithm">Algorithm</string>
    <string name="block_time">Block Time</string>
    <string name="max_supply">Max Supply</string>
    <string name="block_number">Block Number</string>
    <string name="block_reward">Block Reward</string>
    <string name="open_website">Open Website</string>
</resources>